FIX:status nsg font size on mobile devices

--- a/src/pages/Recruiting2324/Recruiting.css
+++ b/src/pages/Recruiting2324/Recruiting.css
@@ -210,4 +210,9 @@
         font-size: 5vw;
         margin: 20vw auto;
     }
+
+    .statusmsgssubmt{
+        font-size: 5vw;
+        margin-top: 2vw;
+    }
 }
